# fluent-types

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel  defs.bzl  lang.ftl  repositories.bzl  utilityTypes.ts
.github/workflows/: build.yml
example/: .gitignore  BUILD.bazel  README.md  defs.bzl  lang.ftl  package.json  pnpm-lock.yaml  tsconfig.json
example/src/: index.ts
src/: cli.rs  codegen.rs  main.rs  parse.rs
