load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@crate_index//:defs.bzl", "all_crate_deps")

rust_binary(
    name = "fluent-types",
    srcs = glob(["src/*.rs"]),
    deps = all_crate_deps(),
    data = ["//:utilityTypes.ts"],
    visibility = ["//visibility:public"],
)

toolchain_type(
  name = "toolchain_type",
  visibility = ["//visibility:public"],
)
