[package]
name = "fluent-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  "3.1"
fluent = "0.16"
fluent-syntax = "0.11"
glob = "0.3"
swc = "0.245"
swc_common = "0.29"
swc_ecma_ast = "0.96"
